Custom--app/main/default/objects/Property_Issue_Photo__c/Property_Issue_Photo__c.object-meta.xml
<CustomObject>
    <label>Property Issue Photo</label>
    <nameField>
        <displayFormat>Photo-{000000}</displayFormat>
        <label>Property Issue Photo ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Issue Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>