Custom--app/main/default/objects/Property_Issue_Photo__c/fields/Property_Issue__c.field-meta.xml
<CustomField>
    <fullName>Property_Issue__c</fullName>
    <label>Property Issue</label>
    <referenceTo>Property_Issues__c</referenceTo>
    <relationshipLabel>Property Issue Photos</relationshipLabel>
    <relationshipName>Property_Issue_Photos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>