Custom--app/main/default/objects/Property_Issue_Photo__c/fields/S3_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>S3_Image_URL__c</fullName>
    <formula>'https://'+ S3_Bucket__c + '.s3.amazonaws.com/'+ S3_Path__c +'?AWSAccessKeyId='+$Label.Access_Key_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S3 Image URL</label>
    <type>Text</type>
</CustomField>