Custom--app/main/default/objects/Property_Issue_Photo__c/fields/S3_Path__c.field-meta.xml
<CustomField>
    <fullName>S3_Path__c</fullName>
    <label>S3 Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>